--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Valentines</title>
-  <link href="/valentines.css" rel="stylesheet">
+  <link href="./valentines.css" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
   </div>
 
 
-  <script src="valentines.js" type="module"></script>
+  <script src="./valentines.js" type="module"></script>
   
 </body>
 </html>
